@@ -1,17 +1,17 @@
 /*
-**  Windstille - A Sci-Fi Action-Adventure Game
-**  Copyright (C) 2009 Ingo Ruhnke <grumbel@gmx.de>
+**  Galapix - an image viewer for large image collections
+**  Copyright (C) 2008 Ingo Ruhnke <grumbel@gmx.de>
 **
 **  This program is free software: you can redistribute it and/or modify
 **  it under the terms of the GNU General Public License as published by
 **  the Free Software Foundation, either version 3 of the License, or
 **  (at your option) any later version.
-**  
+**
 **  This program is distributed in the hope that it will be useful,
 **  but WITHOUT ANY WARRANTY; without even the implied warranty of
 **  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 **  GNU General Public License for more details.
-**  
+**
 **  You should have received a copy of the GNU General Public License
 **  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
@@ -22,6 +22,8 @@
 #include <iostream>
 #include <stdio.h>
 
+#include "job/job_manager.hpp"
+#include "job/job.hpp"
 #include "math/math.hpp"
 #include "plugins/curl.hpp"
 #include "plugins/jpeg.hpp"
@@ -44,16 +46,14 @@ int get_max_scale(const Size& size, int tilesize)
 
 } // namespace
 
-ZoomifyTileProvider::ZoomifyTileProvider(const std::string& basedir, const Size& size, int tilesize) :
+ZoomifyTileProvider::ZoomifyTileProvider(const std::string& basedir, const Size& size, int tilesize, JobManager& job_manager) :
   m_size(size),
   m_tilesize(tilesize),
   m_basedir(basedir),
   m_max_scale(::get_max_scale(size, tilesize)),
-  m_info(m_max_scale+1)
+  m_info(m_max_scale+1),
+  m_job_manager(job_manager)
 {
-  std::cout << "ZoomifyTileProvider(): " << m_basedir << " " 
-            << m_size << " " << m_tilesize << " " << m_max_scale << std::endl;
-
   for(int i = m_max_scale; i >= 0; --i)
   {
     int previous_tiles_count = 0;
@@ -65,7 +65,7 @@ ZoomifyTileProvider::ZoomifyTileProvider(const std::string& basedir, const Size&
     Size size_in_tiles((m_size.width  / Math::pow2(i) - 1) / get_tilesize() + 1,
                        (m_size.height / Math::pow2(i) - 1) / get_tilesize() + 1);
 
-    std::cout << i << " " << previous_tiles_count << " " << size_in_tiles << " - " << size_in_tiles.get_area() << std::endl;
+    //std::cout << i << " " << previous_tiles_count << " " << size_in_tiles << " - " << size_in_tiles.get_area() << std::endl;
 
     m_info[i] = Info(size_in_tiles, previous_tiles_count);
   }
@@ -74,12 +74,13 @@ ZoomifyTileProvider::ZoomifyTileProvider(const std::string& basedir, const Size&
 }
 
 boost::shared_ptr<ZoomifyTileProvider> 
-ZoomifyTileProvider::create(const URL& url)
+ZoomifyTileProvider::create(const URL& url, JobManager& job_manager)
 {
   std::string content = url.get_blob()->str();
 
   std::string url_str = url.str();
-  std::string basedir = url_str.substr(7, url_str.size() - 26); // FIXME: use basedir() instead of raw string cutting
+  // FIXME: use basedir() like function instead of raw unchecked string cutting
+  std::string basedir = url_str.substr(0, url_str.size() - 19); 
   Size size;
   int  tilesize;
   int  num_tiles;
@@ -94,7 +95,7 @@ ZoomifyTileProvider::create(const URL& url)
   }
   else
   {
-    return boost::shared_ptr<ZoomifyTileProvider>(new ZoomifyTileProvider(basedir, size, tilesize));
+    return boost::shared_ptr<ZoomifyTileProvider>(new ZoomifyTileProvider(basedir, size, tilesize, job_manager));
   }
 }
 
@@ -117,29 +118,8 @@ ZoomifyTileProvider::request_tile(int scale, const Vector2i& pos,
   out << m_basedir << "TileGroup" << tile_group << "/" 
       << (m_max_scale - scale) << "-" << pos.x << "-" << pos.y << ".jpg";
 
-  // load the tile
-  if (0)
-  {
-    // FIXME: Could/should do this in a separate thread for http://
-    BlobHandle blob = CURLHandler::get_data(out.str());
-    SoftwareSurfaceHandle surface = JPEG::load_from_mem(blob->get_data(), blob->size());
-    callback(Tile(scale, pos, surface));
-  }
-  else
-  {
-    try 
-    {
-      SoftwareSurfaceHandle surface = JPEG::load_from_file(out.str());
-      callback(Tile(scale, pos, surface));
-    }
-    catch(std::exception& err)
-    {
-      std::cout << "ZoomifyTileProvider: " << err.what() << std::endl;
-    }
-  }
-
   JobHandle job_handle;
-  job_handle.set_finished();
+  m_job_manager.request(boost::shared_ptr<Job>(new ZoomifyTileJob(job_handle, URL::from_string(out.str()), scale, pos, callback)));
   return job_handle;
 }
   
